# mail-mcp

./: .dockerignore  .env.example  .env.prod  .gitignore  AGENTS.md  Dockerfile  README.md  deployment-guide.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy-appservice.yml
src/mail_mcp/: __init__.py  calendar_store.py  calendar_tools.py  email_store.py  email_tools.py  graph_store.py  models.py  server.py  store.py
src/mail_mcp/schemas/: __init__.py  request_models.py
src/mail_mcp/stores/: __init__.py  calendar_store.py  email_send_queue_store.py  email_store.py  graph_store.py  oauth_client_store.py  oauth_token_store.py  table_storage.py
src/mail_mcp/tools/: __init__.py  calendar_tools.py  email_queue_tools.py  email_tools.py  search_token_tools.py
src/mail_mcp/utils/: __init__.py  biz_logger.py  datetime_utils.py  oauth_dynamic_provider.py  oauth_middleware.py  request_token_provider.py  token_log_utils.py
