[project]
name = "mail-mcp"
version = "0.1.0"
description = "A starter MCP mail assistant service built with Python + modelcontextprotocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.10.0",
  "httpx>=0.27.0",
]

[project.scripts]
mail-mcp = "mail_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
